--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -25,15 +25,15 @@
     <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="base-bg overflow-x-hidden">
-    <!-- 1. WRAPPER PRINCIPALE (UI come index.html) -->
-    <div class="base-container flex items-center justify-center p-4 w-full relative" style="min-height: 100vh;">
+<body class="base-bg">
+    <!-- 1. WRAPPER PRINCIPALE -->
+    <div class="base-container auth-viewport">
 
         <!-- 2. FARO (Glow Effect) -->
         <div class="base-glow"></div>
 
         <!-- 3. VAULT CONTAINER -->
-        <div class="base-vault w-full max-w-md relative z-10 py-8">
+        <div class="auth-vault">
 
             <!-- Card Nuova Password -->
             <div class="auth-card border-glow">
@@ -56,7 +56,7 @@
 
                     <!-- Nuova Password -->
                     <div class="auth-form-group">
-                        <label class="auth-label" data-t="new_password">Nuova Password</label>
+                        <label class="auth-label" for="new-password" data-t="new_password">Nuova Password</label>
                         <div class="password-wrapper">
                             <input id="new-password" name="new-password" type="password" autocomplete="new-password"
                                 required class="auth-input" data-t-placeholder="password_placeholder_reg"
@@ -70,30 +70,30 @@
 
                     <!-- Conferma Password -->
                     <div class="auth-form-group">
-                        <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
+                        <label class="auth-label" for="confirm-password" data-t="confirm_new_password">Conferma
+                            Password</label>
                         <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
                             required class="auth-input" placeholder="********">
                     </div>
 
                     <!-- Submit Button -->
                     <button type="submit" id="new-pass-submit-btn" class="auth-btn-primary" data-t="save_new_pass">
-                        <span class="material-symbols-outlined text-20">save</span>
+                        <span class="material-symbols-outlined">save</span>
                         Salva Password
                     </button>
 
                 </form>
 
                 <!-- Annulla Link -->
-                <div style="margin-top: 1.5rem; text-align: center;">
-                    <a href="index.html" id="cancel-password-update" class="link-register" style="margin-top: 0;"
-                        data-t="cancel">
+                <div class="auth-footer-link-box">
+                    <a href="index.html" id="cancel-password-update" data-t="cancel">
                         Annulla
                     </a>
                 </div>
 
                 <!-- Footer Legale -->
                 <div class="legal-footer">
-                    <span class="opacity-50">&copy; 2026</span>
+                    <span>&copy; 2026</span>
                 </div>
 
             </div>
