--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -25,15 +25,15 @@
     <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="base-bg overflow-x-hidden">
-    <!-- 1. WRAPPER PRINCIPALE (UI come index.html) -->
-    <div class="base-container flex items-center justify-center p-4 w-full relative" style="min-height: 100vh;">
+<body class="base-bg">
+    <!-- 1. WRAPPER PRINCIPALE -->
+    <div class="base-container auth-viewport">
 
         <!-- 2. FARO (Glow Effect) -->
         <div class="base-glow"></div>
 
         <!-- 3. VAULT CONTAINER -->
-        <div class="base-vault w-full max-w-md relative z-10 py-8">
+        <div class="auth-vault">
 
             <!-- Card Reset -->
             <div class="auth-card border-glow">
@@ -55,32 +55,30 @@
 
                     <!-- Email -->
                     <div class="auth-form-group">
-                        <label class="auth-label" data-t="email_address_label">Email dell'account</label>
+                        <label class="auth-label" for="email" data-t="email_address_label">Email dell'account</label>
                         <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
                             data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
                     </div>
 
                     <!-- Submit Button -->
                     <button type="submit" id="reset-submit-btn" class="auth-btn-primary" data-t="send_instructions_btn">
-                        <span class="material-symbols-outlined text-20">send</span>
+                        <span class="material-symbols-outlined">send</span>
                         Invia email
                     </button>
 
                 </form>
 
                 <!-- Back Link -->
-                <div style="margin-top: 2rem; text-align: center;">
-                    <a href="index.html" class="link-register"
-                        style="display: inline-flex; align-items: center; justify-content: center; color: rgba(255,255,255,0.6);"
-                        data-t="back_to_login_link">
-                        <span class="material-symbols-outlined text-16" style="margin-right: 0.5rem;">arrow_back</span>
+                <div class="auth-back-link-box">
+                    <a href="index.html" data-t="back_to_login_link">
+                        <span class="material-symbols-outlined">arrow_back</span>
                         Torna al Login
                     </a>
                 </div>
 
                 <!-- Footer Legale -->
                 <div class="legal-footer">
-                    <span class="opacity-50">&copy; 2026</span>
+                    <span>&copy; 2026</span>
                 </div>
 
             </div>
