--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -41,21 +41,20 @@
         <main class="base-main">
 
             <!-- SEARCH BAR (Standard PROTOCOLLO BASE UI) -->
-            <div class="search-container mb-8">
+            <div class="search-container">
                 <label for="account-search" class="sr-only">Cerca account</label>
-                <div class="glass-field border-glow rounded-xl h-50px px-4 flex items-center gap-3">
+                <div class="glass-field search-field-box">
                     <span class="material-symbols-outlined opacity-50">search</span>
                     <input type="search" id="account-search" placeholder="Cerca account o credenziali..."
-                        data-t-placeholder="search_placeholder" autocomplete="off"
-                        class="w-full bg-transparent border-none outline-none h-full text-base text-white">
+                        data-t-placeholder="search_placeholder" autocomplete="off" class="search-input-field">
                 </div>
             </div>
 
             <!-- ACCOUNTS CONTAINER -->
-            <div id="accounts-container" class="flex flex-col gap-2">
+            <div id="accounts-container" class="micro-account-list">
                 <!-- Loading Spinner -->
-                <div class="py-20 flex flex-col items-center justify-center gap-4 opacity-30">
-                    <span class="material-symbols-outlined animate-spin text-4xl">sync</span>
+                <div class="loading-full-box">
+                    <span class="material-symbols-outlined animate-spin loading-spinner-icon">sync</span>
                     <p data-t="loading_data">Caricamento...</p>
                 </div>
             </div>
