--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" class="dark">
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title data-t="general_config_title">Configurazione Generali - PROTOCOLLO BASE</title>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>Configurazione Generali - PROTOCOLLO BASE V3.6</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="manifest" href="manifest.json?v=3.6" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,144 +18,106 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
+    <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
+    <script src="assets/js/core.js?v=3.6"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
 </head>
 
 <body class="base-bg">
-    <div class="base-container">
-        <!-- Faro Estetico -->
+    <div class="base-container relative">
+        <!-- Ambient Glow -->
         <div class="base-glow"></div>
 
-        <!-- HEADER FISSO -->
-        <header class="base-header">
-            <div class="header-balanced-container">
-                <div class="header-left">
-                    <a href="regole_scadenze.html" class="btn-icon-header">
-                        <span class="material-symbols-outlined">arrow_back</span>
-                    </a>
-                </div>
-                <div class="header-center">
-                    <h1 class="header-title" data-t="general_config_title">
-                        CONFIGURAZIONE GENERALI
-                    </h1>
-                </div>
-                <div class="header-right">
-                    <a href="home_page.html" class="btn-icon-header">
-                        <span class="material-symbols-outlined">home</span>
-                    </a>
-                </div>
-            </div>
-        </header>
+        <!-- Automated PROTOCOLLO BASE Header -->
+        <header id="header-placeholder" class="base-header"></header>
+
         <div class="spacer-header"></div>
 
-        <main class="settings-container no-select">
-            <div class="settings-group">
-                <h4 class="settings-group-label" data-t="section_notifications_logic">Logica Notifiche</h4>
+        <!-- Main Content -->
+        <main class="base-main">
+            <div class="detail-content-wrap">
 
-                <!-- 1. Tipo Scadenza -->
-                <div class="settings-item accordion-header cursor-pointer" data-target="container_types">
-                    <div class="settings-item-header">
-                        <div class="settings-item-info">
-                            <div class="settings-icon-box bg-teal-glass">
-                                <span class="material-symbols-outlined material-fill">rule</span>
-                            </div>
-                            <div class="settings-text">
-                                <span class="settings-label" data-t="section_general_type">Tipo Scadenza</span>
-                                <span class="settings-desc" data-t="section_general_desc">Configura tipi generali con
-                                    Preavviso.</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center gap-4">
-                            <button onclick="event.stopPropagation(); window.addTypeItem()"
-                                class="btn-icon-header-small bg-blue-glass-10 icon-accent-blue">
-                                <span class="material-symbols-outlined text-xl">add</span>
-                            </button>
-                            <span id="icon_types" class="material-symbols-outlined settings-chevron">expand_more</span>
-                        </div>
+                <!-- Hero Header -->
+                <div class="hero-profile-header">
+                    <div class="detail-avatar">
+                        <span class="material-symbols-outlined text-3xl">settings_applications</span>
+                    </div>
+                    <div class="hero-title-container">
+                        <h1 class="hero-title" data-t="config_general">Configurazione Generali</h1>
+                        <p class="hero-category-badge" data-t="notification_logic">Logica e parametri notifiche</p>
                     </div>
                 </div>
-                <div id="container_types" class="accordion-content">
-                    <div class="table-container">
-                        <table class="base-table base-divide-y">
-                            <tbody id="tbody_types"></tbody>
-                        </table>
+
+                <!-- 1. Tipo Scadenza -->
+                <div class="flex-col-gap-4">
+                    <div class="detail-section-header">
+                        <div class="flex items-center gap-3">
+                            <span class="material-symbols-outlined detail-section-icon text-teal-400">rule</span>
+                            <h3 class="detail-section-title" data-t="general_deadline_types">Tipi Scadenza</h3>
+                        </div>
+                        <button type="button" id="btn-add-type" class="glass-btn-sm text-teal-400">
+                            <span class="material-symbols-outlined text-lg">add</span>
+                        </button>
+                    </div>
+
+                    <div id="container-types" class="flex-col-gap-2">
+                        <!-- Rendered via JS -->
+                        <div class="flex-center-col py-6 opacity-30">
+                            <p class="text-[10px] font-bold uppercase tracking-widest">Caricamento...</p>
+                        </div>
                     </div>
                 </div>
 
                 <!-- 2. Template Email -->
-                <div class="settings-item accordion-header cursor-pointer" data-target="container_templates">
-                    <div class="settings-item-header">
-                        <div class="settings-item-info">
-                            <div class="settings-icon-box bg-purple-glass">
-                                <span class="material-symbols-outlined material-fill">description</span>
-                            </div>
-                            <div class="settings-text">
-                                <span class="settings-label" data-t="section_email_template">Template Email</span>
-                                <span class="settings-desc" data-t="section_email_template_desc">Testo personalizzato
-                                    per l'invio</span>
-                            </div>
+                <div class="flex-col-gap-4">
+                    <div class="detail-section-header">
+                        <div class="flex items-center gap-3">
+                            <span class="material-symbols-outlined detail-section-icon icon-purple">description</span>
+                            <h3 class="detail-section-title" data-t="email_templates">Template Messaggi</h3>
                         </div>
-                        <div class="flex items-center gap-4">
-                            <button
-                                onclick="event.stopPropagation(); window.addItem('emailTemplates', document.documentElement.lang === 'it' ? 'Nuovo Testo Email:' : 'New Email Text:')"
-                                class="btn-icon-header-small bg-blue-glass-10 icon-accent-blue">
-                                <span class="material-symbols-outlined text-xl">add</span>
-                            </button>
-                            <span id="icon_templates"
-                                class="material-symbols-outlined settings-chevron">expand_more</span>
-                        </div>
+                        <button type="button" id="btn-add-template" class="glass-btn-sm text-purple-400">
+                            <span class="material-symbols-outlined text-lg">add</span>
+                        </button>
                     </div>
-                </div>
-                <div id="container_templates" class="accordion-content">
-                    <div class="table-container">
-                        <table class="base-table base-divide-y">
-                            <tbody id="tbody_templates"></tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
 
-            <!-- Sintassi Automatica -->
-            <div class="settings-group">
-                <h4 class="settings-group-label" data-t="section_syntax_title">Sintassi Automatica</h4>
-                <div class="syntax-container">
-                    <div class="syntax-row">
-                        <label class="syntax-label" data-t="syntax_subject_generated">Oggetto Email Generato</label>
-                        <div class="syntax-code">
-                            <span class="syntax-token emerald">[Oggetto]</span>
-                        </div>
-                    </div>
-                    <div class="syntax-row">
-                        <label class="syntax-label" data-t="syntax_body_generated">Corpo Email Generato</label>
-                        <div class="syntax-code">
-                            <span class="syntax-token muted">"Ciao"</span>
-                            <span class="syntax-token">[Nome]</span>
-                            <span class="syntax-token emerald">[Oggetto]</span>
-                            <span class="syntax-token muted">"in data"</span>
-                            <span class="syntax-token emerald">[Data]</span>
-                        </div>
+                    <div id="container-templates" class="flex-col-gap-2">
+                        <!-- Rendered via JS -->
                     </div>
                 </div>
+
+                <!-- Syntax Info -->
+                <div class="p-6 bg-teal-500/5 rounded-3xl border border-teal-500/10 flex-col-gap-4">
+                    <div class="flex items-center gap-2">
+                        <span class="material-symbols-outlined text-teal-400">info</span>
+                        <span class="text-[10px] font-black uppercase tracking-widest text-white/60">Sintassi
+                            Automatica</span>
+                    </div>
+                    <div class="bg-black/40 p-4 rounded-2xl flex flex-col gap-2 text-[10px] font-mono">
+                        <p class="flex items-center gap-2">
+                            <span class="text-white/40">Oggetto:</span>
+                            <span class="px-2 py-0.5 rounded bg-teal-500/20 text-teal-400">[Oggetto]</span>
+                        </p>
+                        <p class="flex items-center gap-2">
+                            <span class="text-white/40">Corpo:</span>
+                            <span class="px-2 py-0.5 rounded bg-teal-500/20 text-teal-400">[Oggetto]</span>
+                            <span class="px-2 py-0.5 rounded bg-amber-500/20 text-amber-400">[Data]</span>
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </main>
 
         <div class="spacer-footer"></div>
-        <!-- FOOTER PREMIUM -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.3"></script>
-    <script src="assets/js/configurazione_generali.js?v=3.3" type="module"></script>
+    <script type="module" src="assets/js/main.js?v=3.6"></script>
+    <script type="module" src="assets/js/configurazione_generali.js?v=3.6"></script>
 </body>
 
 </html>
-
-
-
-
