--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -2,26 +2,27 @@
 <html lang="it">
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Dettaglio Account Privato - PROTOCOLLO BASE</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="manifest" href="manifest.json?v=3.6" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
+    <link rel="stylesheet" href="assets/css/fonts.css?v=3.6">
+    <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
+    <script src="assets/js/core.js?v=3.6"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
 </head>
 
 <body class="base-bg">
@@ -32,38 +33,17 @@
         <!-- 2. FARO ANIMATO -->
         <div class="base-glow pointer-events-none"></div>
 
-        <!-- HEADER FISSO (Standard) -->
-        <header class="base-header">
-            <div class="header-balanced-container">
-                <!-- SX: Back -->
-                <div class="header-left">
-                    <a href="account_privati.html" class="btn-icon-header">
-                        <span class="material-symbols-outlined">arrow_back</span>
-                    </a>
-                </div>
-
-                <!-- Center: Titolo -->
-                <div class="header-center">
-                    <h1 class="header-title" data-t="account_detail_title">Dettaglio Account</h1>
-                </div>
-
-                <!-- DX: Home -->
-                <div class="header-right">
-                    <a href="home_page.html" class="btn-icon-header">
-                        <span class="material-symbols-outlined">home</span>
-                    </a>
-                </div>
-            </div>
-        </header>
+        <!-- HEADER FISSO (Protocollo v3.6 Placeholder) -->
+        <header id="header-placeholder" class="base-header"></header>
 
         <!-- Header Spacer -->
         <div class="spacer-header"></div>
 
         <main class="base-main">
-            <!-- Hero Profile Header (Legacy Class Compatibility) -->
+            <!-- Hero Profile Header -->
             <div class="hero-profile-header">
                 <!-- Top Accent Bar (Dynamic) -->
-                <div id="hero-accent-bar" class="hero-accent-bar"></div>
+
 
                 <div class="detail-avatar-container">
                     <div id="detail-avatar" class="detail-avatar border-glow"></div>
@@ -83,17 +63,15 @@
                         <span class="material-symbols-outlined detail-section-icon icon-accent-blue">key</span>
                         <h3 class="detail-section-title" data-t="access_credentials">Credenziali Accesso</h3>
                     </div>
-                    <div class="flex-col-gap-4">
+                    <div class="flex-col-gap">
 
                         <!-- Nome Account -->
                         <div class="glass-field-container">
-                            <span class="view-label" data-t="account_name">Nome Account</span>
-                            <div class="base-card border-glow p-3 flex items-center justify-between">
-                                <!-- Updated to base-card -->
-                                <input id="detail-nomeAccount" readonly
-                                    class="bg-transparent border-none w-full text-primary"
-                                    style="text-transform: none;">
-                                <button class="btn-icon-header copy-btn">
+                            <label class="view-label" for="detail-nomeAccount" data-t="account_name">Nome
+                                Account</label>
+                            <div class="detail-field-box border-glow">
+                                <input id="detail-nomeAccount" readonly class="detail-field-input no-transform">
+                                <button class="btn-icon-header copy-btn" type="button">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
                             </div>
@@ -101,12 +79,11 @@
 
                         <!-- Utente -->
                         <div class="glass-field-container">
-                            <span class="view-label" data-t="username">Utente</span>
-                            <div class="base-card border-glow p-3 flex items-center justify-between">
+                            <label class="view-label" for="detail-username" data-t="username">Utente</label>
+                            <div class="detail-field-box border-glow">
                                 <input id="detail-username" type="text" readonly
-                                    class="bg-transparent border-none w-full text-primary base-shield"
-                                    style="text-transform: none;">
-                                <button class="btn-icon-header copy-btn">
+                                    class="detail-field-input base-shield no-transform">
+                                <button class="btn-icon-header copy-btn" type="button">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
                             </div>
@@ -114,12 +91,12 @@
 
                         <!-- Account -->
                         <div class="glass-field-container">
-                            <span class="view-label" data-t="account_code">Account / Codice</span>
-                            <div class="base-card border-glow p-3 flex items-center justify-between">
+                            <label class="view-label" for="detail-account" data-t="account_code">Account /
+                                Codice</label>
+                            <div class="detail-field-box border-glow">
                                 <input id="detail-account" type="text" readonly
-                                    class="bg-transparent border-none w-full text-primary base-shield"
-                                    style="text-transform: none;">
-                                <button class="btn-icon-header copy-btn">
+                                    class="detail-field-input base-shield no-transform">
+                                <button class="btn-icon-header copy-btn" type="button">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
                             </div>
@@ -127,16 +104,15 @@
 
                         <!-- Password -->
                         <div class="glass-field-container">
-                            <span class="view-label" data-t="password">Password</span>
-                            <div class="base-card border-glow p-3 flex items-center justify-between">
+                            <label class="view-label" for="detail-password" data-t="password">Password</label>
+                            <div class="detail-field-box border-glow">
                                 <input id="detail-password" type="text" readonly
-                                    class="bg-transparent border-none w-full text-primary base-shield field-value-password"
-                                    style="text-transform: none;">
-                                <div class="flex gap-2">
-                                    <button id="toggle-password" class="btn-icon-header">
+                                    class="detail-field-input base-shield field-value-password no-transform">
+                                <div class="detail-field-actions">
+                                    <button id="toggle-password" class="btn-icon-header" type="button">
                                         <span class="material-symbols-outlined">visibility</span>
                                     </button>
-                                    <button class="btn-icon-header copy-btn">
+                                    <button class="btn-icon-header copy-btn" type="button">
                                         <span class="material-symbols-outlined">content_copy</span>
                                     </button>
                                 </div>
@@ -145,16 +121,15 @@
 
                         <!-- Sito Web -->
                         <div class="glass-field-container">
-                            <span class="view-label" data-t="website">Sito Web</span>
-                            <div class="base-card border-glow p-3 flex items-center justify-between">
+                            <label class="view-label" for="detail-website" data-t="website">Sito Web</label>
+                            <div class="detail-field-box border-glow">
                                 <input id="detail-website" readonly
-                                    class="bg-transparent border-none w-full text-primary link-underlined"
-                                    style="text-transform: none;">
-                                <div class="flex gap-2">
-                                    <button id="open-website" class="btn-icon-header">
+                                    class="detail-field-input link-underlined no-transform">
+                                <div class="detail-field-actions">
+                                    <button id="open-website" class="btn-icon-header" type="button">
                                         <span class="material-symbols-outlined">open_in_new</span>
                                     </button>
-                                    <button class="btn-icon-header copy-btn">
+                                    <button class="btn-icon-header copy-btn" type="button">
                                         <span class="material-symbols-outlined">content_copy</span>
                                     </button>
                                 </div>
@@ -163,9 +138,6 @@
                     </div>
                 </section>
 
-                <!-- ... Other sections (Banking, Referente, Note, Allegati, Options) kept simplified for brevity but structure maintained ... -->
-                <!-- Assuming user wants the core fix first. I will keep the structure but ensure classes are base-card -->
-
                 <!-- NOTE -->
                 <section class="mt-6">
                     <div class="detail-section-header">
@@ -173,12 +145,22 @@
                             class="material-symbols-outlined detail-section-icon icon-accent-amber">sticky_note_2</span>
                         <h3 class="detail-section-title" data-t="notes">Note</h3>
                     </div>
-                    <div class="base-card border-glow p-4 relative">
-                        <p id="detail-note" class="note-text text-sm whitespace-pre-wrap" style="text-transform: none;">
-                            -</p>
-                        <button id="copy-note" class="btn-icon-header absolute top-2 right-2">
+                    <div class="detail-field-box border-glow mt-4">
+                        <p id="detail-note" class="note-text no-transform flex-1 mr-2">-</p>
+                        <button id="copy-note" class="btn-icon-header" type="button">
                             <span class="material-symbols-outlined text-sm">content_copy</span>
                         </button>
+                    </div>
+                </section>
+
+                <!-- SHARED MANAGEMENT (Sezione Dinamica) -->
+                <section id="shared-management-section" class="mt-8 mb-10 hidden">
+                    <div class="detail-section-header">
+                        <span class="material-symbols-outlined detail-section-icon icon-accent-blue">share</span>
+                        <h3 class="detail-section-title">Gestione Accessi</h3>
+                    </div>
+                    <div id="guests-list" class="flex-col-gap mt-4">
+                        <!-- Guest rows injected here -->
                     </div>
                 </section>
 
@@ -187,46 +169,14 @@
 
         <div class="spacer-footer"></div>
 
-        <!-- FOOTER PREMIUM (Standard) -->
-        <footer class="base-footer">
-            <!-- SX: Theme -->
-            <button id="theme-toggle-detail" class="theme-switch-btn" onclick="
-                const html = document.documentElement;
-                const isDark = html.classList.contains('dark');
-                html.classList.toggle('dark');
-                localStorage.setItem('theme', isDark ? 'light' : 'dark');
-            ">
-                <span class="material-symbols-outlined">contrast</span>
-            </button>
-
-            <!-- CENTER: Actions -->
-            <div class="footer-center">
-                <button id="btn-edit" class="btn-icon-header" onclick="window.editAccount()">
-                    <span class="material-symbols-outlined">edit</span>
-                </button>
-                <button id="btn-delete" class="btn-icon-header text-red-500" onclick="window.deleteAccount()">
-                    <span class="material-symbols-outlined">delete</span>
-                </button>
-                <button id="btn-share" class="btn-icon-header" onclick="window.shareAccount()">
-                    <span class="material-symbols-outlined">share</span>
-                </button>
-            </div>
-
-            <!-- DX: Settings -->
-            <a href="impostazioni.html" class="btn-icon-header">
-                <span class="material-symbols-outlined">settings</span>
-            </a>
-        </footer>
+        <!-- FOOTER PREMIUM (Protocollo Placeholder) -->
+        <footer id="footer-placeholder" class="base-footer"></footer>
 
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.3"></script>
-    <script type="module" src="assets/js/dettaglio_account_privato.js?v=3.3"></script>
+    <script type="module" src="assets/js/main.js?v=3.6"></script>
+    <script type="module" src="assets/js/dettaglio_account_privato.js?v=3.6"></script>
 </body>
 
 </html>
-
-
-
-
