--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -2,7 +2,8 @@
 <html lang="it">
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Home - PROTOCOLLO BASE</title>
@@ -12,7 +13,7 @@
 
   <!-- Fonts -->
   <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+  <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
   <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
   <!-- CORE JS -->
@@ -27,8 +28,6 @@
     <!-- HEADER FISSO -->
     <header class="base-header">
       <div class="header-balanced-container">
-        <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
         <div class="header-left">
           <a href="profilo_privato.html" class="avatar-header-link">
             <div id="header-user-avatar" class="header-avatar-box">
@@ -38,7 +37,7 @@
 
           <!-- Testo Cliccabile -->
           <a href="profilo_privato.html" class="profile-header-link">
-            <div class="flex flex-col justify-center">
+            <div class="header-user-info">
               <span id="home-greeting-text" class="header-greeting-text">...</span>
               <h1 id="home-user-name" class="header-title">Home Page</h1>
             </div>
@@ -50,7 +49,7 @@
 
         <!-- Right: Logout -->
         <div class="header-right">
-          <button id="header-logout-btn" class="btn-icon-header">
+          <button type="button" id="header-logout-btn" class="btn-icon-header">
             <span class="material-symbols-outlined">logout</span>
           </button>
         </div>
@@ -77,7 +76,7 @@
 
         <a href="scadenze.html?filter=in_scadenza"
           class="matrix-card card-orange border-glow adaptive-shadow area-scadenze">
-          <div class="flex justify-between items-start w-full mb-2">
+          <div class="matrix-card-top-row">
             <div class="matrix-icon-box"><span class="material-symbols-outlined">calendar_month</span></div>
             <span id="upcoming-count-badge" class="badge-count badge-initial-hide">
               <span id="upcoming-count">0</span>
@@ -91,7 +90,7 @@
         </a>
 
         <a href="scadenze.html?filter=urgenti" class="matrix-card card-red border-glow adaptive-shadow area-urgenze">
-          <div class="flex justify-between items-start w-full mb-2">
+          <div class="matrix-card-top-row">
             <div class="matrix-icon-box"><span class="material-symbols-outlined">warning</span></div>
             <span id="expired-count-badge" class="badge-count badge-initial-hide">
               <span id="expired-count">0</span>
@@ -111,7 +110,7 @@
     <!-- FOOTER -->
     <footer class="base-footer">
       <!-- SX: Theme Switcher -->
-      <button id="theme-toggle-home" class="btn-icon-header">
+      <button type="button" id="theme-toggle-home" class="btn-icon-header">
         <span class="material-symbols-outlined">contrast</span>
       </button>
 
@@ -125,15 +124,9 @@
     </footer>
   </div>
 
-
-
   <!-- Scripts -->
   <script type="module" src="assets/js/main.js?v=3.3"></script>
   <script type="module" src="assets/js/home.js?v=3.3"></script>
 </body>
 
 </html>
-
-
-
-
