--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" class="dark">
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Scadenze - PROTOCOLLO BASE</title>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>Scadenze - PROTOCOLLO BASE V3.6</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="manifest" href="manifest.json?v=3.6" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,42 +18,25 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
+    <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
+    <script src="assets/js/core.js?v=3.6"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
 </head>
 
 <body class="base-bg">
     <div class="base-container">
-        <!-- GLOW LAYER -->
+        <!-- Ambient Glow -->
         <div class="base-glow"></div>
 
-        <!-- HEADER FISSO -->
-        <header class="base-header">
-            <div class="header-balanced-container">
-                <div class="header-left">
-                    <a href="home_page.html" class="btn-icon-header">
-                        <span class="material-symbols-outlined">arrow_back</span>
-                    </a>
-                </div>
-                <div class="header-center">
-                    <h1 class="header-title" data-t="deadlines_title">
-                        SCADENZE
-                    </h1>
-                </div>
-                <div class="header-right">
-                    <a href="home_page.html" class="btn-icon-header">
-                        <span class="material-symbols-outlined">home</span>
-                    </a>
-                </div>
-            </div>
-        </header>
+        <!-- Automated Header -->
+        <header id="header-placeholder" class="base-header"></header>
+
         <div class="spacer-header"></div>
 
-        <!-- Search Bar -->
+        <!-- Search Bar (Animated) -->
         <div id="search-bar-container" class="search-bar-animated">
             <div class="search-input-wrapper">
                 <span class="material-symbols-outlined">search</span>
@@ -60,73 +45,69 @@
             </div>
         </div>
 
-        <main class="settings-container no-select">
+        <main class="base-main">
+            <div class="flex-col-gap-4 pb-20">
 
-            <!-- Barra Ordinamento (Row Layout V3.0) -->
-            <div class="flex flex-nowrap items-center justify-between w-full py-2 px-4 border-b border-white-5 mb-2">
+                <!-- Toolbar: Count + Sort -->
+                <div class="flex items-center justify-between px-1 py-2 border-b border-white/5">
+                    <!-- Left: Count -->
+                    <div class="flex items-center gap-2">
+                        <span id="deadline-count"
+                            class="size-7 rounded-full bg-blue-500/10 border border-blue-500/20 text-blue-400 flex-center text-[10px] font-black">0</span>
+                        <span data-t="deadlines_total"
+                            class="text-[10px] font-black uppercase tracking-widest text-white/40">Scadenze</span>
+                    </div>
 
-                <!-- Sinistra: Conteggio -->
-                <div class="flex items-center gap-2 shrink-0">
-                    <span id="deadline-count"
-                        class="bg-blue-glass-20 text-primary text-10 font-black py-05 px-2 rounded-full min-w-6 text-center">0</span>
-                    <span data-t="deadlines_total"
-                        class="text-10 font-heavy all-caps tracked-wide text-primary whitespace-nowrap">Scadenze
-                        Totali</span>
-                </div>
+                    <!-- Right: Sort Dropdown -->
+                    <div class="base-dropdown">
+                        <button id="sort-btn" class="base-btn-secondary h-10 px-4 rounded-xl flex items-center gap-2">
+                            <span class="material-symbols-outlined text-base">sort</span>
+                            <span data-t="sort_by"
+                                class="text-xs font-bold uppercase tracking-widest opacity-70">Ordina</span>
+                            <span class="material-symbols-outlined text-base">expand_more</span>
+                        </button>
 
-                <!-- Destra: Ordinamento -->
-                <div class="base-dropdown w-auto ml-auto shrink-0">
-                    <button id="sort-btn" class="base-btn-secondary h-10 px-4 rounded-xl flex items-center gap-2">
-                        <span class="material-symbols-outlined text-base">sort</span>
-                        <span data-t="sort_by"
-                            class="text-xs font-bold uppercase tracking-widest opacity-70">Ordina</span>
-                        <span class="material-symbols-outlined text-base">expand_more</span>
-                    </button>
-
-                    <div id="sort-menu" class="base-dropdown-menu right-0 origin-tr min-w-140">
-                        <div class="base-dropdown-item active" data-t="sort_date_near" data-value="date-asc">DATA
-                            (VICINA)</div>
-                        <div class="base-dropdown-item" data-t="sort_date_far" data-value="date-desc">DATA (LONTANA)
+                        <div id="sort-menu" class="base-dropdown-menu right-0 origin-tr min-w-140">
+                            <div class="base-dropdown-item active" data-t="sort_date_near" data-value="date-asc">DATA
+                                (VICINA)</div>
+                            <div class="base-dropdown-item" data-t="sort_date_far" data-value="date-desc">DATA (LONTANA)
+                            </div>
+                            <div class="base-dropdown-item" data-t="sort_name_az" data-value="name-asc">NOME (A-Z)</div>
+                            <div class="base-dropdown-item" data-t="sort_name_za" data-value="name-desc">NOME (Z-A)
+                            </div>
                         </div>
-                        <div class="base-dropdown-item" data-t="sort_name_az" data-value="name-asc">NOME (A-Z)</div>
-                        <div class="base-dropdown-item" data-t="sort_name_za" data-value="name-desc">NOME (Z-A)</div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Filter Chips -->
-            <div class="filter-container">
-                <button class="filter-chip active" data-t="filter_all">Tutte</button>
-                <button class="filter-chip" data-t="filter_urgent">Urgenti</button>
-                <button class="filter-chip" data-t="filter_expiring">In scadenza</button>
-                <button class="filter-chip" data-t="filter_completed">Completate</button>
-            </div>
-
-            <!-- List Content -->
-            <div id="scadenze-list" class="settings-group pb-20">
-                <!-- Loading State -->
-                <div class="flex flex-col items-center justify-center opacity-30 py-20 gap-4">
-                    <div class="size-10 border-2 border-white-5 border-t-blue-500 rounded-full animate-spin">
-                    </div>
-                    <p class="text-07 font-bold all-caps tracking-widest m-0" data-t="analyzing_data">Analisi dati...
-                    </p>
+                <!-- Filter Chips -->
+                <div class="filter-container">
+                    <button class="filter-chip active" data-t="filter_all">Tutte</button>
+                    <button class="filter-chip" data-t="filter_urgent">Urgenti</button>
+                    <button class="filter-chip" data-t="filter_expiring">In scadenza</button>
+                    <button class="filter-chip" data-t="filter_completed">Completate</button>
                 </div>
-            </div>
 
+                <!-- List Content -->
+                <div id="scadenze-list" class="flex-col-gap-3">
+                    <!-- Loading State -->
+                    <div class="flex flex-col items-center justify-center opacity-30 py-20 gap-4">
+                        <div class="size-10 border-2 border-white/5 border-t-blue-500 rounded-full animate-spin"></div>
+                        <p class="text-[10px] font-bold uppercase tracking-widest" data-t="analyzing_data">Analisi
+                            dati...</p>
+                    </div>
+                </div>
+
+            </div>
         </main>
 
         <div class="spacer-footer"></div>
-        <!-- FOOTER PREMIUM -->
+        <!-- Automated Footer -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.3"></script>
-    <script src="assets/js/scadenze.js?v=3.3" type="module"></script>
+    <script type="module" src="assets/js/main.js?v=3.6"></script>
+    <script src="assets/js/scadenze.js?v=3.6" type="module"></script>
 </body>
 
 </html>
-
-
-
-
